--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -1,6 +1,6 @@
 .c-header {
   position: relative;
-  font-family: $font-family-1; // Needed as the map CSS overrides it
+  font-family: $content-font; // Needed as the map CSS overrides it
   z-index: 12;
 
   @if $theme == 3 {
@@ -18,7 +18,7 @@
   }
 
   @if $theme == 1 or $theme == 3 {
-    color: $color-1;
+    color: $accent-color;
     font-size: $font-size-normal;
   }
 
@@ -61,7 +61,7 @@
     }
 
     @if $theme == 1 {
-      background-color: $color-1;
+      background-color: $accent-color;
     }
 
     @media #{$mq-navbar} {
@@ -153,7 +153,7 @@
     }
 
     @if $theme == 1 {
-      background-color: $color-1;
+      background-color: $accent-color;
     }
 
     @media #{$mq-tablet} {
@@ -234,7 +234,7 @@
         }
 
         @if $theme == 1 or $theme == 3 {
-          background-color: $color-1;
+          background-color: $accent-color;
         }
 
         &::before {
@@ -250,7 +250,7 @@
             }
 
             @if $theme == 1 or $theme == 3 {
-              background-color: $color-1;
+              background-color: $accent-color;
             }
           }
 
@@ -260,7 +260,7 @@
             }
 
             @if $theme == 1 or $theme == 3 {
-              background-color: $color-1;
+              background-color: $accent-color;
             }
             opacity: 0.5;
             &::before {
@@ -276,7 +276,7 @@
       height: 40px;
       margin-top: 5px;
       border-radius: 100%;
-      background-color: $color-1;
+      background-color: $accent-color;
       background-position: center center;
       background-size: cover;
       color: $color-4;
@@ -292,7 +292,7 @@
     height: 50px;
 
     @if $theme == 3 {
-      max-width: $body-max-width;
+      max-width: $content-width;
       margin: 0 auto;
       background: transparent;
     }
@@ -388,7 +388,7 @@
             }
 
             @if $theme == 1 {
-              background-color: rgba($color-1, 0.1);
+              background-color: rgba($accent-color, 0.1);
             }
           }
 
@@ -400,7 +400,7 @@
               }
 
               @if $theme == 1 or $theme == 3 {
-                border-right: 1px solid rgba($color-1, 0.1);
+                border-right: 1px solid rgba($accent-color, 0.1);
               }
             }
           }
@@ -461,7 +461,7 @@
                   }
 
                   @if $theme == 1 {
-                    background-color: rgba($color-1, 0.1);
+                    background-color: rgba($accent-color, 0.1);
                   }
                 }
 
@@ -524,7 +524,7 @@
         height: 40px;
         margin-top: 5px;
         border-radius: 100%;
-        background-color: $color-1;
+        background-color: $accent-color;
         background-position: center center;
         background-size: cover;
         color: $color-4;
@@ -607,7 +607,7 @@
         @if $theme == 1 {
           top: 50px;
           height: 30px;
-          background-color: rgba($color-1, 0.7);
+          background-color: rgba($accent-color, 0.7);
         }
       }
 
@@ -687,7 +687,7 @@
               }
 
               @if $theme == 1 {
-                background-color: rgba($color-1, 0.1);
+                background-color: rgba($accent-color, 0.1);
               }
             }
           }
@@ -710,7 +710,7 @@
     }
 
     @if $theme == 1 or $theme == 3 {
-      background-color: $color-1;
+      background-color: $accent-color;
     }
 
     @media print {
