--- a/app/assets/stylesheets/components/management/c-card-list.scss
+++ b/app/assets/stylesheets/components/management/c-card-list.scss
@@ -17,6 +17,7 @@
 
     > .title {
       margin: 0 0 15px;
+      font-family: $heading-font;
       font-size: $font-size-medium;
       font-weight: $font-weight-normal;
       text-transform: uppercase;
