--- a/app/assets/stylesheets/components/management/c-widget-deletion-modal.scss
+++ b/app/assets/stylesheets/components/management/c-widget-deletion-modal.scss
@@ -12,6 +12,7 @@
 
       h1 {
         margin: 0 0 20px;
+        font-family: $heading-font;
         font-size: $font-size-huge;
         font-weight: $font-weight-light;
         text-align: center;
