--- a/app/assets/stylesheets/components/shared/c-dashboard-chart-view.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-chart-view.scss
@@ -10,8 +10,8 @@
     }
 
     &::after {
-      border-top-color: $color-1;
-      border-right-color: $color-1;
+      border-top-color: $accent-color;
+      border-right-color: $accent-color;
     }
   }
 
