--- a/app/assets/stylesheets/components/shared/c-dashboard-map-view.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-map-view.scss
@@ -9,8 +9,8 @@
     }
 
     .leaflet-overlay-pane path {
-      fill: $color-1;
-      stroke: $color-1;
+      fill: $accent-color;
+      stroke: $accent-color;
       fill-opacity: .2;
     }
   }
