--- a/app/assets/stylesheets/components/admin/c-flag-colors.scss
+++ b/app/assets/stylesheets/components/admin/c-flag-colors.scss
@@ -29,7 +29,7 @@
       z-index: 1;
 
       &:focus + .preview {
-        border: 2px solid $color-1;
+        border: 2px solid $accent-color;
       }
     }
 
@@ -46,14 +46,14 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    border: 1px dashed $color-1;
+    border: 1px dashed $accent-color;
     background-color: transparent;
     cursor: pointer;
 
     span {
       flex-basis: 70px;
-      color: $color-1;
-      font-family: $font-family-1;
+      color: $accent-color;
+      font-family: $content-font;
       font-size: $font-size-normal;
       font-weight: $font-weight-bold;
       letter-spacing: .1px;
@@ -62,7 +62,7 @@
     }
 
     &:focus {
-      background: $color-1;
+      background: $accent-color;
 
       span {
         color: $color-3;
@@ -83,7 +83,7 @@
     z-index: 2;
 
     &:focus {
-      border: 2px solid $color-1;
+      border: 2px solid $accent-color;
     }
   }
 }
