--- a/app/assets/stylesheets/components/front/c-footer.scss
+++ b/app/assets/stylesheets/components/front/c-footer.scss
@@ -6,7 +6,7 @@
   }
 
   @if $theme == 1 {
-    background-color: rgba($color-1, 0.2);
+    background-color: rgba($accent-color, 0.2);
   }
 
   @media print {
@@ -27,7 +27,7 @@
 
   @if $theme == 1 {
     font-size: $font-size-normal;
-    background-color: $color-1;
+    background-color: $accent-color;
   }
 
   @media #{$mq-tablet} {
@@ -51,7 +51,7 @@
     height: 100%;
 
     @if $theme == 3 {
-      max-width: $body-max-width;
+      max-width: $content-width;
       margin: 0 auto;
     }
 
@@ -84,7 +84,7 @@
         }
 
         @if $theme == 2 {
-          color: rgba($color-1, 0.3);
+          color: rgba($accent-color, 0.3);
         }
       }
 
@@ -101,7 +101,7 @@
         }
 
         @if $theme == 2 {
-          color: $color-1;
+          color: $accent-color;
         }
 
         font-weight: $font-weight-light;
@@ -156,7 +156,7 @@
           height: 100%;
 
           @if $theme == 2 {
-            fill: $color-1;
+            fill: $accent-color;
           }
 
           @if $theme == 1 or $theme == 3 {
