--- a/app/assets/stylesheets/components/management/c-tree-structure.scss
+++ b/app/assets/stylesheets/components/management/c-tree-structure.scss
@@ -82,8 +82,8 @@
     }
 
     &.-highlight {
-      border-color: $color-1;
-      background-color: $color-1;
+      border-color: $accent-color;
+      background-color: $accent-color;
       color: $color-3;
     }
 
@@ -207,7 +207,7 @@
   .add-page-button {
     position: relative;
     padding: 10px 70px;
-    border: 1px solid $color-1;
+    border: 1px solid $accent-color;
     border-radius: 36px;
     background: transparent;
     text-transform: uppercase;
