--- a/app/assets/stylesheets/components/shared/c-action-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-bar.scss
@@ -21,7 +21,7 @@
       left: 0;
       width: 100vw;
       max-width: none;
-      padding: 0 calc((100vw - #{$body-max-width}) / 2);
+      padding: 0 calc((100vw - #{$content-width}) / 2);
       transform: none;
     }
   }
