--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -108,7 +108,7 @@
       border: 0;
       color: $color-4;
       min-height: 250px;
-      font-family: $font-family-1;
+      font-family: $content-font;
       font-size: $font-size-s-normal;
       line-height: 1.5;
     }
@@ -121,7 +121,7 @@
       border: 1px solid $color-13;
       border-radius: 4px;
       color: $color-4;
-      font-family: $font-family-1;
+      font-family: $content-font;
       font-size: $font-size-normal;
       line-height: 40px;
       background: asset-url('icons/arrow-icon.svg') no-repeat;
@@ -135,7 +135,7 @@
 
       &.is-focused:not(.is-open) > .Select-control {
         box-shadow: none;
-        border-color: $color-1;
+        border-color: $accent-color;
       }
 
       .Select-input input {
@@ -149,8 +149,8 @@
 
         .Select-value {
           color: $color-4;
-          border-color: $color-1;
-          background-color: rgba($color-1, .1);
+          border-color: $accent-color;
+          background-color: rgba($accent-color, .1);
           margin: 5px 0 0 5px;
 
           .Select-value-label {
@@ -158,11 +158,11 @@
           }
 
           .Select-value-icon {
-            border-right-color: $color-1;
+            border-right-color: $accent-color;
 
             &:hover {
               color: $color-4;
-              background: rgba($color-1, .2);
+              background: rgba($accent-color, .2);
             }
           }
         }
@@ -174,7 +174,7 @@
         .Select-option {
           &.is-selected,
           &.is-focused {
-            background: rgba($color-1, .1);
+            background: rgba($accent-color, .1);
           }
         }
       }
