--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -33,7 +33,7 @@
     border-radius: 100px;
     background-color: $color-16;
     color: $color-4;
-    font-family: $font-family-1;
+    font-family: $content-font;
     font-size: $font-size-normal;
     font-weight: $font-weight-normal;
     letter-spacing: .1px;
@@ -43,7 +43,7 @@
     -webkit-appearance: none;
 
     @if $theme == 2 {
-      border: 1px solid $color-1;
+      border: 1px solid $accent-color;
       text-transform: uppercase;
     }
 
