--- a/app/assets/stylesheets/components/shared/c-steps-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-steps-bar.scss
@@ -20,7 +20,7 @@
       background: transparent;
       border: 0;
       appearance: none;
-      font-family: $font-family-1;
+      font-family: $content-font;
       font-size: $font-size-normal;
       cursor: pointer;
 
