--- a/app/assets/stylesheets/components/shared/c-table-modal.scss
+++ b/app/assets/stylesheets/components/shared/c-table-modal.scss
@@ -6,6 +6,7 @@
 
   h1 {
     margin: 0 0 60px;
+    font-family: $heading-font;
     font-size: $font-size-huge;
     font-weight: $font-weight-light;
     text-align: center;
