--- a/app/assets/stylesheets/components/shared/c-tabs.scss
+++ b/app/assets/stylesheets/components/shared/c-tabs.scss
@@ -18,7 +18,7 @@
 
   &.-secondary {
     position: relative;
-    background-color: rgba($color-1, .1);
+    background-color: rgba($accent-color, .1);
 
     &:after {
       display: block;
@@ -27,7 +27,7 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      background: $color-1;
+      background: $accent-color;
       content: '';
     }
 
@@ -41,7 +41,7 @@
       z-index: 1;
 
       &[aria-selected="true"] {
-        border-color: $color-1;
+        border-color: $accent-color;
       }
     }
   }
