--- a/app/assets/stylesheets/components/shared/c-toggle-switcher.scss
+++ b/app/assets/stylesheets/components/shared/c-toggle-switcher.scss
@@ -6,25 +6,25 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    border: 1px solid rgba($color-1, .3);
+    border: 1px solid rgba($accent-color, .3);
     border-radius: 40px;
   }
 
   button {
     display: block;
     padding: 5px 25px;
-    color: $color-1;
+    color: $accent-color;
     line-height: 27px;
     background: transparent;
     border: 1px solid transparent;
     border-radius: 40px;
     appearance: none;
-    font-family: $font-family-1;
+    font-family: $content-font;
     font-size: $font-size-normal;
     cursor: pointer;
 
     &.-active {
-      background: $color-1;
+      background: $accent-color;
       color: $color-3;
       pointer-events: none;
     }
