--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -76,7 +76,7 @@
           z-index: 1; // Required to be positioned on top
 
           &:focus + input + .content img {
-            border: 2px solid $color-1;
+            border: 2px solid $accent-color;
           }
         }
 
@@ -92,7 +92,7 @@
             height: calc(100% - 29px);
             transition: opacity .3s;
             border-radius: 4px;
-            background: asset-url('icons/large-check-icon.svg') no-repeat center center, rgba($color-1, .8);
+            background: asset-url('icons/large-check-icon.svg') no-repeat center center, rgba($accent-color, .8);
             content: '';
             opacity: 0;
           }
@@ -141,7 +141,7 @@
         cursor: pointer;
 
         &:focus + .preview {
-          border: 2px solid $color-1;
+          border: 2px solid $accent-color;
         }
       }
 
@@ -169,6 +169,7 @@
 
         h3 {
           margin-top: 0;
+          font-family: $heading-font;
           font-size: $font-size-normal;
           text-transform: uppercase;
         }
@@ -185,7 +186,7 @@
           z-index: 1;
 
           &:focus + .placeholder {
-            background: $color-1;
+            background: $accent-color;
 
             span {
               color: $color-3;
@@ -193,7 +194,7 @@
           }
 
           &:focus + .preview {
-            border-color: $color-1;
+            border-color: $accent-color;
           }
         }
 
@@ -207,7 +208,7 @@
           justify-content: center;
           width: 100%;
           height: 100px;
-          border: 1px dashed $color-1;
+          border: 1px dashed $accent-color;
 
           &.-high {
             height: 170px;
@@ -215,7 +216,7 @@
 
           span {
             flex-basis: 70px;
-            color: $color-1;
+            color: $accent-color;
             font-weight: $font-weight-bold;
             letter-spacing: .1px;
             text-align: center;
@@ -284,7 +285,7 @@
             }
 
           }
-  
+
         }
       }
 
@@ -323,6 +324,10 @@
             margin-top: 0;
           }
 
+          > h3 {
+            font-family: $heading-font;
+          }
+
           > div {
             flex-basis: calc(50% - 10px);
             margin-right: 20px;
@@ -358,7 +363,7 @@
           margin: 12px auto 0;
           font-style: italic;
           text-align: right;
-          font-family: $font-family-1;
+          font-family: $content-font;
           font-size: $font-size-small;
           color: $color-4;
           border: none;
