--- a/app/assets/stylesheets/layouts/front/fa-login.scss
+++ b/app/assets/stylesheets/layouts/front/fa-login.scss
@@ -6,6 +6,7 @@
   border-radius: 5px;
 
   h2 {
+    font-family: $heading-font;
     font-size: 24px;
     text-align: center;
     text-transform: uppercase;
