--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -84,6 +84,7 @@
     margin-top: 50px;
 
     h2 {
+      font-family: $heading-font;
       font-size: $font-size-big;
       text-align: center;
     }
@@ -112,7 +113,7 @@
   &.-dashboard-preview {
     .c-dashboard {
       margin: 70px auto;
-      max-width: $body-max-width;
+      max-width: $content-width;
     }
   }
 
@@ -128,7 +129,7 @@
     }
 
     a {
-      color: $color-1;
+      color: $accent-color;
       text-decoration: none;
     }
   }
@@ -140,7 +141,7 @@
   }
 
   50% {
-    background-color: rgba($color-1, .3);
+    background-color: rgba($accent-color, .3);
   }
 
   100% {
