--- a/app/views/management/dataset_steps/metadata.html.erb
+++ b/app/views/management/dataset_steps/metadata.html.erb
@@ -19,6 +19,6 @@
     metadata: @metadata
   }) %>
 
-  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug)} %>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug), no_continue: true} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @dataset } %>
