Update the header with the new settings

--- a/app/assets/stylesheets/front/_base-theme-default.scss
+++ b/app/assets/stylesheets/front/_base-theme-default.scss
@@ -16,6 +16,7 @@ body {
 }
 
 body {
+  position: relative; // Make sure the header has the correct width
   max-width: $content-width;
   color: $color-4;
   font-family: $content-font;
