--- a/app/assets/stylesheets/front/_settings-theme-ind.scss
+++ b/app/assets/stylesheets/front/_settings-theme-ind.scss
@@ -62,6 +62,7 @@ $color-14: #ff706c;
 $color-15: #404040;
 $color-16: tint($color-1, 85%);
 $color-17: #0B0908;
+$color-18: #d8d8d8;
 
 // General layout
 $body-max-width:         1280px;
