--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -114,7 +114,13 @@
     font-size: $font-size-big !important;
     font-weight: $font-weight-light;
     font-style: italic;
+    color: $color-4;
+    line-height: 1.5;
     border-left: none !important;
+
+    @media #{$mq-mobile} {
+      line-height: 1.25;
+    }
 
     &::before {
       content: "“";
@@ -127,31 +133,6 @@
     @media #{$mq-mobile} {
       margin: 60px auto;
       font-size: $font-size-medium;
-    }
-
-    @if $theme == 3 {
-      color: $color-4;
-      line-height: 1.5;
-
-      @media #{$mq-mobile} {
-        line-height: 1.25;
-      }
-    }
-
-    @if $theme == 2 {
-      color: $color-4;
-      letter-spacing: 0.2px;
-      line-height: 1.1;
-    }
-
-    @if $theme == 1 {
-      color: $accent-color;
-      font-family: $font-family-2;
-      line-height: 1.5;
-
-      @media #{$mq-mobile} {
-        line-height: 1.25;
-      }
     }
   }
 
@@ -404,12 +385,11 @@
           -moz-appearance: none;
           -webkit-appearance: none;
 
-          @if $theme == 2 {
+          @if $template == 'default' {
             border: 1px solid $accent-color;
-            text-transform: uppercase;
           }
 
-          @if $theme == 1 or $theme == 3 {
+          @if $template == 'india' {
             border: 0;
           }
 
