Update which metadata in shown in the dashboards

--- a/app/assets/stylesheets/components/shared/c-dashboard.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard.scss
@@ -164,8 +164,18 @@
       }
     }
 
-    p {
+    p, ul {
       margin: 15px 0;
+    }
+
+    ul {
+      display: block;
+
+      li {
+        display: list-item;
+        margin-left: 15px;
+        list-style-type: disc;
+      }
     }
   }
 }
