Add metadata options for the dataset edition

--- a/app/views/management/dataset_steps/options.html.erb
+++ b/app/views/management/dataset_steps/options.html.erb
@@ -12,22 +12,12 @@
 <%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @dataset.id, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data %>
 
-<%= react_component('ManagementDatasetAliases', {
-  columns: [
-    {
-      name: 'capacity',
-      alias: 'Capacity (MWh)',
-      description: '',
-    },
-    {
-      name: 'brightness',
-    },
-    {
-      name: 'date',
-      alias: 'Year',
-      description: 'Year during which the values have been averaged. Year starts on January 1st, 0AM UTC and finished on December 31st, 12PM UTC.'
-    }
-  ]
-}) %>
+<%= form_for @dataset, url: wizard_path, method: :put do |f| %>
+  <%= react_component('ManagementDatasetAliases', {
+    columns: @metadata_columns
+  }) %>
+
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug), no_continue: true} %>
+<% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @dataset } %>
