Add edition/creation of columns on the metadata

--- a/app/views/management/dataset_steps/options.html.erb
+++ b/app/views/management/dataset_steps/options.html.erb
@@ -14,6 +14,8 @@
 
 <%= form_for @dataset, url: wizard_path, method: :put do |f| %>
   <%= react_component('ManagementDatasetAliases', {
+    metadataId: @metadata_id,
+    defaultLanguage: @default_language,
     columns: @metadata_columns
   }) %>
 
