--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -4,6 +4,7 @@
   padding-bottom: 75px;
 
   &.-title,
+  &.-metadata,
   &.-aliases {
     display: flex;
     align-items: center;
@@ -25,6 +26,14 @@
       margin: 40px auto;
     }
 
+    .c-inputs-container > .container {
+      > textarea {
+        min-height: 120px;
+      }
+    }
+  }
+
+  &.-aliases {
     .c-inputs-container > .container {
       input:disabled {
         // Since this input has a background, a padding make it appear nicer
