--- a/app/assets/stylesheets/front/_settings-theme-default.scss
+++ b/app/assets/stylesheets/front/_settings-theme-default.scss
@@ -7,8 +7,8 @@ $template: $template; // String: «default», «india»
 $accent-color: $accent-color; // Hex code
 
 $content-width: $content-width; // Pixels or percentage
-$content-font: $content-font, sans-serif; // Font family name
-$heading-font: $heading-font, sans-serif; // Font family name
+$content-font: $content-font; // Font family name
+$heading-font: $heading-font; // Font family name
 $cover-size: $cover-size; // Pixels
 $cover-text-alignment: $cover-text-alignment; // text-align value
 
@@ -113,14 +113,22 @@ $footer-links-colour: $footer-links-colour; // String: «white», «accent-color
 }
 
 // FONT SIZES
-$font-size-small:    12px;
-$font-size-normal:   14px;
-$font-size-s-normal: 15px;
-$font-size-x-normal: 19px;
-$font-size-medium:   21px;
-$font-size-big:      35px;
-$font-size-x-big:    40px;
-$font-size-huge:     47px;
+$font-factor: 1;
+@if $content-font == 'Roboto Condensed' {
+  $font-factor: 1.07;
+}
+@if $content-font == 'Acumin Pro Condensed' {
+  $font-factor: 1.14;
+}
+
+$font-size-small:    #{ceil(12px * $font-factor)};
+$font-size-normal:   #{ceil(14px * $font-factor)};
+$font-size-s-normal: #{ceil(15px * $font-factor)};
+$font-size-x-normal: #{ceil(19px * $font-factor)};
+$font-size-medium:   #{ceil(21px * $font-factor)};
+$font-size-big:      #{ceil(35px * $font-factor)};
+$font-size-x-big:    #{ceil(40px * $font-factor)};
+$font-size-huge:     #{ceil(47px * $font-factor)};
 
 // FONT WEIGHTS
 $font-weight-light:  300;
