--- a/app/assets/stylesheets/front/_base-theme-default.scss
+++ b/app/assets/stylesheets/front/_base-theme-default.scss
@@ -32,8 +32,9 @@ body {
     max-width: none;
 
     .c-header {
-      // TODO: static or nothing depending on transparency of menu
-      // CARPE used static
+      @if $template == 'india' {
+        position: static;
+      }
     }
   }
 
